# ticket-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent-1-formatter/: Dockerfile  requirements.txt
agent-1-formatter/app/: crud.py  database.py  llm_processor.py  main.py  models.py  schemas.py
agent-2-rag/: requirements.txt
agent-2-rag/app/: graph_processor.py  llm_orchestrator_processor.py  llm_sql_processor.py  main.py  repository.py
evaluation-service/: Dockerfile  requirements.txt
evaluation-service/app/: config.py  database.py  main.py  scheduler.py
evaluation-service/app/api/: agent1_evaluation_routes.py  evaluation_routes.py  metrics_routes.py
evaluation-service/app/datasets/: agent1_test_tickets.json  loader.py  test_queries.json
evaluation-service/app/evaluators/: agent1_evaluator.py  ragas_evaluator.py
guardrails/: Dockerfile  requirements.txt
guardrails/app/: main.py  prompt_guards.py
ocr-service/: requirements.txt
ocr-service/app/: main.py
postgres/: init-db.sql
tool-web/: Dockerfile  requirements.txt
tool-web/app/: main.py
ui/: Dockerfile  requirements.txt
ui/app/: Home.py  main.py
ui/app/pages/: 1_Client_Uploader.py  2_Admin_Dashboard.py  3_Metrics_Dashboard.py
